# tasked

./: .env.example  .gitignore  Cargo.toml  README.md  cliff.toml  flake.nix  go.mod  go.sum  justfile  main.go  readme.md
cmd/: add.go  done.go  lists.go  login.go  logout.go  ls.go  move.go  profile.go  rm.go  root.go  search.go
docs/: tasked_main_ui_proto
internal/auth/: creds.go  oauth.go
internal/config/: config.go
internal/tasks/: client.go  priority.go  task.go
internal/tui/: form.go  list.go  picker.go  style.go
src/: args.rs  events.rs  init.rs  lib.rs  logging.rs  main.rs  prelude.rs  tracer.rs  utils.rs
src/auth/: google.rs
src/cli/: app.rs  inline.rs  mod.rs
src/cmd/: commands.rs
src/common/: mod.rs  tasks.rs
src/tui/: commands.rs  mod.rs  state.rs  ui.rs
