[package]
name = "tasked"
authors = ["n3tw0rth"]
keywords = ["cli", "task", "management", "todo", "todolist"]
categories = ["tui"]
description = "A simple CLI task management tool"
repository = "https://github.com/n3tw0rth/tasked"
license = "MIT"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
better-panic = "0.3.0"
clap = { version = "4.5.29", features = ["derive", "env", "wrap_help", "cargo"] }
color-eyre = "0.6.3"
directories = "6.0.0"
lazy_static = "1.5.0"
ratatui = "0.29.0"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
