[package]
name = "tasked"
authors = ["n3tw0rth"]
keywords = ["cli", "task", "management", "todo", "todolist"]
categories = ["tui"]
description = "A simple CLI task management tool"
repository = "https://github.com/n3tw0rth/tasked"
license = "MIT"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.95"
better-panic = "0.3.0"
chrono = "0.4.40"
clap = { version = "4.5.29", features = ["derive", "env", "wrap_help", "cargo"] }
color-eyre = "0.6.3"
directories = "6.0.0"
dotenv = "0.15.0"
keyring = { version = "3.6.2", features = ["linux-native-sync-persistent","linux-native","sync-secret-service"] }
lazy_static = "1.5.0"
oauth2 = { version = "5.0.0"  }  
open = "5.3.2"
ratatui = "0.29.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking","json"] }
retry = "2.0.0"
serde = "1.0.218"
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"

[dev-dependencies]
cargo-watch = "8.5.3"
